--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,12 @@
       "cache": false
     },
     "lint": {},
+    "typecheck": {
+      "cache": false
+    },
+    "clean": {
+      "cache": false
+    },
     "test": {}
   }
 }
