--- a/apps/vite-demo/package.json
+++ b/apps/vite-demo/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean": "rm -rf dist .turbo tsconfig.app.tsbuildinfo tsconfig.node.tsbuildinfo",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "react": "^19.1.1",
