--- a/apps/vite-demo/package.json
+++ b/apps/vite-demo/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+        "@coolui/core": "workspace:*",
+    "@coolui/theme": "workspace:*"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -27,8 +29,6 @@
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7",
-    "@coolui/core": "workspace:*",
-    "@coolui/theme": "workspace:*"
+    "vite": "^7.1.7"
   }
 }
