--- a/packages/core/tsconfig.build.json
+++ b/packages/core/tsconfig.build.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "lib": ["DOM", "DOM.Iterable", "ES2016"],
+    "esModuleInterop": true,
     "jsx": "react-jsx",
     "skipLibCheck": true,
     "strict": true,
