--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -9,7 +9,8 @@
       "types": "./dist/index.d.ts",
       "import": "./dist/index.client.js",
       "require": "./dist/index.server.js"
-    }
+    },
+    "./styles.css": "./src/index.css"
   },
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
@@ -22,5 +23,10 @@
   },
   "dependencies": {
     "@coolui/core": "workspace:*"
+  },
+  "devDependencies": {
+    "react": "^19.1.1",
+    "@types/react": "^19",
+    "typescript": "latest"
   }
 }
