--- a/apps/vite-demo/package.json
+++ b/apps/vite-demo/package.json
@@ -12,10 +12,12 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@coolui/core": "workspace:*",
+    "@coolui/theme": "workspace:*",
+    "@tailwindcss/vite": "^4.1.16",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-        "@coolui/core": "workspace:*",
-    "@coolui/theme": "workspace:*"
+    "tailwindcss": "^4"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
