--- a/apps/vite-demo/package.json
+++ b/apps/vite-demo/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "clean": "rm -rf dist .turbo tsconfig.app.tsbuildinfo tsconfig.node.tsbuildinfo",
-    "typecheck": "tsc --noEmit"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@coolui/core": "workspace:*",
