--- a/turbo.json
+++ b/turbo.json
@@ -2,10 +2,15 @@
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
     "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**"
+      ]
     },
     "dev": {
+      "persistent": true,
       "cache": false
     },
     "lint": {},
