--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,34 +1,41 @@
 {
   "name": "@coolui/core",
   "version": "0.1.0",
-  "main": "dist/index.server.js",
-  "module": "dist/index.client.js",
-  "types": "dist/index.d.ts",
+  "main": "./dist/index.client.js",
+  "module": "./dist/index.client.mjs",
+  "types": "./dist/index.client.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.client.js",
+      "types": "./dist/index.client.d.ts",
+      "import": "./dist/index.client.mjs",
+      "require": "./dist/index.client.js"
+    },
+    "./server": {
+      "types": "./dist/index.server.d.ts",
+      "import": "./dist/index.server.mjs",
       "require": "./dist/index.server.js"
     }
   },
   "scripts": {
-    "build": "tsc --build",
-    "dev": "tsc --build --watch --preserveWatchOutput",
-    "clean": "rm -rf dist .turbo tsconfig.build.tsbuildinfo",
-    "typecheck": "tsc -p tsconfig.build.json --noEmit"
+    "build": "tsup",
+    "dev": "tsup --watch",
+    "clean": "rm -rf dist .turbo",
+    "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
     "react": "^18 || ^19",
     "react-dom": "^18 || ^19"
   },
-  "devDependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+  "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "^3.3.1"
+  },
+  "devDependencies": {
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "typescript": "latest"
   }
 }
