--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,14 +3,20 @@
     "target": "ES2020",
     "module": "ESNext",
     "jsx": "react-jsx",
+    "moduleResolution": "bundler",  // ✅ Modern
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "strict": true,
-    "lib": ["DOM", "ES2020"]
+    "lib": ["DOM", "ES2020"],
+    
+    // ✅ For packages:
+    "declaration": true,
+    "declarationMap": true,
+    "composite": true,
+    "incremental": true
   }
 }
