--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "files": [],
   "references": [
-    { "path": "packages/core" },
-    { "path": "packages/theme" }
-  ],
-  "compilerOptions": {
-    "composite": true
-  }
+    { "path": "./packages/core" },
+    { "path": "./packages/theme" },
+    { "path": "./apps/vite-demo" },
+    { "path": "./apps/nextjs-demo" }
+  ]
 }
