--- a/turbo.json
+++ b/turbo.json
@@ -2,24 +2,22 @@
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
     "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        "dist/**"
-      ]
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", ".next/**", "out/**", "build/**"]
     },
     "dev": {
       "persistent": true,
       "cache": false
     },
-    "lint": {},
+    "lint": {
+      "outputs": [".eslintcache"]
+    },
     "typecheck": {
-      "cache": false
+      "dependsOn": ["^build"],
+      "outputs": ["**/*.tsbuildinfo"]
     },
     "clean": {
       "cache": false
-    },
-    "test": {}
+    }
   }
 }
