--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,22 +1,28 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
+    /* === Core Output Settings === */
+    "target": "ESNext",
     "module": "ESNext",
+    "lib": [
+      "DOM",
+      "ESNext"
+    ],
+    "moduleResolution": "Bundler",
+    "outDir": "dist",
+    /* === React + Next.js Compatibility === */
     "jsx": "react-jsx",
-    "moduleResolution": "bundler",  // ✅ Modern
-    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
+    /* === Type Safety & Declarations === */
     "strict": true,
-    "lib": ["DOM", "ES2020"],
-    
-    // ✅ For packages:
     "declaration": true,
     "declarationMap": true,
-    "composite": true,
-    "incremental": true
+    "sourceMap": true,
+    
+    /* === Next.js Optimization === */
+    "isolatedModules": true,
+    "noEmit": true
   }
 }
