--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -2,19 +2,19 @@
   "name": "@coolui/theme",
   "description": "Flexible theme system for Next.js and React",
   "version": "0.1.0",
-  "main": "./dist/server.js",
-  "module": "./dist/server.mjs",
-  "types": "./dist/server.d.ts",
+  "main": "./dist/export/server.js",
+  "module": "./dist/export/server.mjs",
+  "types": "./dist/export/server.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/server.d.ts",
-      "import": "./dist/server.mjs",
-      "require": "./dist/server.js"
+      "types": "./dist/export/server.d.ts",
+      "import": "./dist/export/server.mjs",
+      "require": "./dist/export/server.js"
     },
     "./client": {
-      "types": "./dist/client.d.ts",
-      "import": "./dist/client.mjs",
-      "require": "./dist/client.js"
+      "types": "./dist/export/client.d.ts",
+      "import": "./dist/export/client.mjs",
+      "require": "./dist/export/client.js"
     },
     "./styles.css": {
       "default": "./dist/styles.css"
@@ -23,20 +23,19 @@
   "scripts": {
     "clean": "rm -rf dist .turbo",
     "typecheck": "tsc --noEmit",
-    "build:ts": "tsup",
+    "build:js": "tsup",
+    "build:types": "tsc --project tsconfig.build.json",
     "build:css": "tailwindcss -i ./src/styles/index.css -o ./dist/styles.css --minify",
-    "build": "pnpm run clean && pnpm run build:css && pnpm run build:ts",
-    "dev:ts": "tsup --watch",
+    "build": "pnpm run clean && pnpm run build:css && pnpm run build:js && pnpm run build:types",
+    "dev:js": "tsup --watch",
     "dev:css": "tailwindcss -i ./src/styles/index.css -o ./dist/styles.css --watch",
-    "dev": "concurrently \"pnpm run dev:ts\" \"pnpm run dev:css\""
+    "dev": "concurrently \"pnpm run dev:js\" \"pnpm run dev:css\""
   },
   "peerDependencies": {
     "react": "^18 || ^19",
     "react-dom": "^18 || ^19"
   },
-  "dependencies": {
-    "@coolui/core": "workspace:*"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/react": "^19",
     "concurrently": "^8.2.0",
