--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -2,9 +2,9 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "export",
+    "rootDir": ".",
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["src","export"],
-  "exclude": ["node_modules", "dist"],
+  "exclude": ["node_modules", "dist"]
 }
