--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "files": [],
   "references": [
+    { "path": "./packages/core" },
     { "path": "./packages/theme" },
+    { "path": "./packages/typography" },
     { "path": "./playground/nextjs" },
   ]
 }
