--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "composite": true,
+
     /* Core compilation settings */
     "target": "ESNext",
     "module": "ESNext",
