--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -4,15 +4,15 @@
   "version": "0.1.0",
   "main": "./dist/server.js",
   "module": "./dist/server.mjs",
-  "types": "./dist/server.d.ts",
+  "types": "./dist/export/server.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/server.d.ts",
+      "types": "./dist/export/server.d.ts",
       "import": "./dist/server.mjs",
       "require": "./dist/server.js"
     },
     "./client": {
-      "types": "./dist/client.d.ts",
+      "types": "./dist/export/client.d.ts",
       "import": "./dist/client.mjs",
       "require": "./dist/client.js"
     },
