--- a/playground/nextjs/package.json
+++ b/playground/nextjs/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@coolui/theme": "workspace:*",
+    "@coolui/core": "workspace:*",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "next": "16.0.1"
