--- a/packages/cool/package.json
+++ b/packages/cool/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@coolui/core",
+  "name": "@coolui/boilerplate",
   "version": "1.0.0",
   "description": "A collection of beautiful, accessible React components for Next.js",
   "author": "Your Name <your.email@example.com>",
@@ -58,8 +58,6 @@
     "test": "echo \"No tests yet\" && exit 0"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
     "tailwindcss": "^4"
   },
   "devDependencies": {
