--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "references": [
     { "path": "./packages/core" },
     { "path": "./packages/theme" },
+    { "path": "./packages/typography" },
     { "path": "./playground/nextjs" },
   ]
 }
