Add layout package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     { "path": "./packages/core" },
     { "path": "./packages/theme" },
     { "path": "./packages/typography" },
+    { "path": "./packages/layout" },
     { "path": "./playground/nextjs" },
   ]
 }
