--- a/playground/nextjs/package.json
+++ b/playground/nextjs/package.json
@@ -14,6 +14,7 @@
     "@coolui/core": "workspace:*",
     "@coolui/theme": "workspace:*",
     "@coolui/typography": "workspace:*",
+    "@coolui/layout": "workspace:*",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "next": "16.0.1"
