--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
     { "path": "./packages/theme" },
     { "path": "./packages/typography" },
     { "path": "./packages/layout" },
-    { "path": "./playground/nextjs" },
+    { "path": "./playground/nextjs" }
   ]
 }
