:bug: fixing css

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,6 +30,7 @@
       "types": "./dist/client.d.ts",
       "import": "./dist/client.js"
     },
+    "./styles.css": "./source/styles/index.css",
     "./package.json": "./package.json"
   },
   "files": [
