--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "turbo run lint",
     "typecheck": "turbo run typecheck",
     "clean": "turbo run clean && pnpm -r exec rm -rf node_modules && rm -rf node_modules",
-    "clean:dist": "turbo run clean"
+    "clean:dist": "turbo run clean",
+    "build:packages": "turbo run build --filter=packages/*"
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.1.16",
