--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,9 @@
   "references": [
     { "path": "./packages/styles" },
     { "path": "./packages/core" },
+    { "path": "./packages/application" },
     { "path": "./packages/theme" },
     { "path": "./packages/typography" },
-    { "path": "./packages/layout" },
     { "path": "./playground/nextjs" }
   ]
 }
