:bug: Circula package imports fixed, stable

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,8 +45,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@coolui/styles": "workspace:*",
-    "@coolui/typography": "workspace:*"
+    "@coolui/styles": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
